fix: spacing issues on sub form

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -275,6 +275,20 @@ input[type="submit"]:hover {
   display: block;
 }
 
+.subForm .form-group {
+  margin-bottom: 1.2rem;
+  padding: 0 1rem;
+}
+
+.subForm input[type="text"],
+.subForm input[type="date"],
+.subForm textarea,
+.subForm select {
+  width: calc(100% - 1.2rem);
+  margin: 0;
+  box-sizing: border-box;
+}
+
 .close-button {
   position: absolute;
   top: 10px;
